# rbase64

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: audit.yml  ci.yml  release-packaging.yml  test.yaml
benches/: baseline.md  baseline.txt  benchmarks.rs
scripts/: diff.js  test-all-features.sh  update-baseline.sh
src/: base64.rs  common.rs  decode.rs  encode.rs  lib.rs  main.rs
tests/: cli-tests.rs
tests/resources/: bytes.b64  utf8.base64  utf8.txt
