[package]
name = "rbase64"
version = "1.2.0"
edition = "2021"
description = "A simple base64 encoder / decoder CLI tool made in Rust"
authors = ["Marcel Riera <marcel.riera@outlook.com>"]
license = "MIT OR Apache-2.0"
keywords = ["base64", "encode", "decode"]
categories = ["encoding", "command-line-utilities"]
homepage = "https://github.com/uhmarcel/rbase64"
repository = "https://github.com/uhmarcel/rbase64"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
criterion = "0.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "benchmarks"
harness = false