[package]
name = "rbase64"
version = "1.3.1"
edition = "2021"
description = "A simple base64 encoder / decoder CLI tool made in Rust"
authors = ["Marcel Riera <marcel.riera@outlook.com>"]
license = "MIT OR Apache-2.0"
keywords = ["base64", "encode", "decode"]
categories = ["encoding", "command-line-utilities"]
homepage = "https://github.com/uhmarcel/rbase64"
repository = "https://github.com/uhmarcel/rbase64"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
criterion = "0.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "rbase64"
required-features = ["cli"]

[[bench]]
name = "benchmarks"
harness = false